<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="applicationName">Droid Reader</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="refresh">Refresh</string>       
    <string name="subscribe">Subscribe</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="channel_already_exists">The feed from URL {url} has already existed.</string>
    <string name="enter_your_rss_url_hint">enter your RSS/ATOM feed url</string>
    <string name="new_items_notification">{total} new items</string>
    <string name="subscribing_channel">Subscribing to {channel}...</string>
    <string name="updating_channel">Updating {channel}</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="no_channel_has_new_items">There are no channel has new items now.</string>
    <string name="auto_update_key">auto_update</string>
    <string name="auto_update_option_title">Auto update</string>
    <string name="auto_update_on">Feeds will be updated automatically</string>
    <string name="auto_update_off">You must manually update your feeds</string>
    <string name="show_updated_channels_key">show_updated_channels</string>
    <string name="show_updated_channels_option_title">Show feeds</string>
    <string name="show_updated_channels_on">which have unread items</string>    
    <string name="show_updated_channels_off">show all feeds</string>
    <string name="update_interval_key">update_interval</string>
    <string name="first_time_key">first_time</string>
    <string name="update_interval_dialog_title">Update interval</string>
    <string name="update_interval_dialog_message">How long will we update feeds?</string>
    
    <string name="language_key">locale</string>
    <string name="language_dialog_title">Language</string>
    <string name="language_dialog_message">Which language will be used to display texts/messages in the application?</string>
        
    <string name="synchronization_options">Synchronization</string>        
    <string name="display_options">Display</string>
    <string name="notification_options">Notification</string>    
    <string name="font_dialog_title">Font</string>
    <string name="font_dialog_message">Which font will be used to display articles?</string>
    <string name="font_size_dialog_title">Font size</string>
    <string name="font_size_dialog_message">How large article texts will be displayed?</string>
    <string name="notification_sound_title">Sound</string>
    <string name="notification_vibrate_title">Vibrate</string>
    <string name="notification_light_title">Light</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    
    <string name="download_images_option_title">Download images?</string>
    <string name="download_images_on">Download articles images for offline reading (slow!)</string>
    <string name="download_images_off">Do not download article images</string>
    
    <string name="max_items_per_channel_key">max_items_per_channel</string>
    <string name="max_items_per_channel_dialog_title">Max items per feed?</string>
    <string name="max_items_per_channel_dialog_message">How many items should we keep per feed?</string>
        
    <string name="keep_max_items_dialog_title">Keep maximum articles?</string>
    <string name="keep_max_items_dialog_message">How much articles should we keep?</string>
    
    <string name="latest">Latest articles</string>
    <string name="starred">Starred articles</string>
    <string name="shared">Shared articles</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscribe_to">Subscribe to</string>
    <string name="your_subscriptions">Your subscriptions</string>
    <string name="our_suggestion">Our suggestion</string>
    <string name="from_channel">from {channel}</string>
    <string name="edit">Edit</string>
    <string name="subscribe_successfully">Your feeds have been subscribed successfully.</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="unsubscribing_channel">Unsubscribing to {channel}...</string>
    <string name="unsubscribe_successfully">You has unsubscribed to {channel} successfully.</string>
    <string name="unsubscribe_failed">Failed to unsubscribed to {channel}. Please try again.</string>
    <string name="unsubscribe_confirmation">You are unsubscribing following feed(s):\n\n{feeds}\n\nThese feeds will be removed from your Google Reader subscriptions.\n\nAre you sure you want to unsubscribe?</string>
    <string name="confirmation">Confirmation</string>
    
    <string name="saving_subscriptions">Synchronizing your subscriptions with Google Reader...</string>
    <string name="failed_to_save_subscriptions">Following feeds cannot be subscribed/unsubscribed:\n</string>
    <string name="synchorization_started">Synchronization started...</string>
    
    <string name="synchronizing_tags">Synchronizing tags</string>
    <string name="synchronizing_subscriptions">Synchronizing subscriptions</string>
    <string name="synchronizing_articles_state">Synchronizing articles state</string>
    <string name="updating_articles_of_tags">Updating articles of tags</string>
    <string name="updating_feed">Updating {feed}</string>
    
    <string name="star">Add star</string>
    <string name="unstar">Remove star</string>
    <string name="share">Share</string>
    <string name="unshare">Unshare</string>
    <string name="keep_unread">Keep unread</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="view_original">View original</string>
    <string name="share_text">Nice article: {link}</string>
    <string name="mobilize">Mobilize</string>
    <string name="do_not_mobilize">Do not mobilize</string>
    <string name="mobilizing">Mobilizing article...</string>
    <string name="channel_mobilized">This channel will be mobilized automatically.</string>
    <string name="channel_not_mobilized">This channel will not be mobilized automatically.</string>
    
    <string name="authorize">Authorize</string>
    <string name="register">Register</string>
    <string name="google_reader_authorization_guideline">To use this application, you must have a Google Account.\n\nThis application will need your permission to access your feeds. To grant your permission to <b>Droid Reader</b>, tap on <b>Authorize</b> button.</string>
    <string name="google_reader_registration_guideline">If you have not have a <b>Google Account</b>, tap on the <b>Register</b> button below to register your own account.</string>
    <string name="logout">Logout</string>
    <string name="website_url">Website URL</string>
    <string name="feed_url">or Feed URL</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="source">Source: &lt;strong&gt;{source}&lt;/strong&gt;</string>
    <string name="published">Published: {on}</string>
    <string name="article">Article {no}</string>
    
    <string name="select_tag_dialog_title">View articles by tag</string>
    <string name="no_unread_article">No unread article.</string>
    
    <string name="item_starred">This article has been starred.</string>
    <string name="item_unstarred">This article has been unstarred.</string>
    <string name="item_kept_unread">This article has been kept unread.</string>
    <string name="item_marked_as_read">This article has been marked as read.</string>
    <string name="about_text">
Version: {version}\r\n\r\n
Credits:\r\n
\tApplication icon by 2ExpertDesign\r\n
\tToolbar icons by GentleFace\r\n
\tReadability by arc90
\tFrench translation by Guillaume Gauthier
    </string>    
</resources>